--- a/Deep_Learning_Specialization/Course1/Week2/Python_Basics_With_Numpy.ipynb
+++ b/Deep_Learning_Specialization/Course1/Week2/Python_Basics_With_Numpy.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -51,11 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test: Hello World\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"test: \" + test)"
    ]
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -133,11 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9525741268224334"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "basic_sigmoid(3)"
    ]
@@ -244,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -274,11 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.73105858,  0.88079708,  0.95257413])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = np.array([1, 2, 3])\n",
     "sigmoid(x)"
@@ -313,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -343,11 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid_derivative(x) = [ 0.19661193  0.10499359  0.04517666]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([1, 2, 3])\n",
     "print (\"sigmoid_derivative(x) = \" + str(sigmoid_derivative(x)))"
@@ -392,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -417,11 +455,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image2vector(image) = [[ 0.67826139]\n",
+      " [ 0.29380381]\n",
+      " [ 0.90714982]\n",
+      " [ 0.52835647]\n",
+      " [ 0.4215251 ]\n",
+      " [ 0.45017551]\n",
+      " [ 0.92814219]\n",
+      " [ 0.96677647]\n",
+      " [ 0.85304703]\n",
+      " [ 0.52351845]\n",
+      " [ 0.19981397]\n",
+      " [ 0.27417313]\n",
+      " [ 0.60659855]\n",
+      " [ 0.00533165]\n",
+      " [ 0.10820313]\n",
+      " [ 0.49978937]\n",
+      " [ 0.34144279]\n",
+      " [ 0.94630077]]\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a 3 by 3 by 2 array, typically images will be (num_px_x, num_px_y,3) where 3 represents the RGB values\n",
     "image = np.array([[[ 0.67826139,  0.29380381],\n",
@@ -614,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -651,11 +714,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "softmax(x) = [[  9.80897665e-01   8.94462891e-04   1.79657674e-02   1.21052389e-04\n",
+      "    1.21052389e-04]\n",
+      " [  8.78679856e-01   1.18916387e-01   8.01252314e-04   8.01252314e-04\n",
+      "    8.01252314e-04]]\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.array([\n",
     "    [9, 2, 5, 0, 0],\n",
@@ -832,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -868,11 +942,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L1 = 1.1\n"
+     ]
+    }
+   ],
    "source": [
     "yhat = np.array([.9, 0.2, 0.1, .4, .9])\n",
     "y = np.array([1, 0, 0, 1, 1])\n",
@@ -905,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -932,11 +1014,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L2 = 0.43\n"
+     ]
+    }
+   ],
    "source": [
     "yhat = np.array([.9, 0.2, 0.1, .4, .9])\n",
     "y = np.array([1, 0, 0, 1, 1])\n",
