--- a/Advanced_Machine_Learning_Specialization/Course1/Week4/Adversarial-task.ipynb
+++ b/Advanced_Machine_Learning_Specialization/Course1/Week4/Adversarial-task.ipynb
@@ -163,12 +163,19 @@
     "discriminator = Sequential()\n",
     "\n",
     "discriminator.add(L.InputLayer(IMG_SHAPE))\n",
-    "\n",
-    "<build discriminator body>\n",
+    "discriminator.add(L.Conv2D(filters=16, kernel_size=(3, 3), padding='same', activation='elu'))\n",
+    "discriminator.add(L.MaxPooling2D(pool_size=(2, 2), strides=None))\n",
+    "discriminator.add(L.Conv2D(filters=32, kernel_size=(3, 3), padding='same', activation='elu'))\n",
+    "discriminator.add(L.MaxPooling2D(pool_size=(2, 2), strides=None))\n",
+    "discriminator.add(L.Conv2D(filters=32, kernel_size=(3, 3), padding='same', activation='elu'))\n",
+    "discriminator.add(L.MaxPooling2D(pool_size=(2, 2), strides=None))\n",
+    "discriminator.add(L.Conv2D(filters=64, kernel_size=(3, 3), padding='same', activation='elu'))\n",
+    "discriminator.add(L.MaxPooling2D(pool_size=(2, 2), strides=None))\n",
     "\n",
     "discriminator.add(L.Flatten())\n",
     "discriminator.add(L.Dense(256,activation='tanh'))\n",
-    "discriminator.add(L.Dense(2,activation=tf.nn.log_softmax))\n"
+    "discriminator.add(L.Dense(2,activation=tf.nn.log_softmax))\n",
+    "print(discriminator.summary())"
    ]
   },
   {
@@ -204,9 +211,9 @@
     "\n",
     "logp_real = discriminator(real_data)\n",
     "\n",
-    "generated_data = <gen(noise)>\n",
+    "generated_data = generator(noise)\n",
     "\n",
-    "logp_gen = <log P(real | gen(noise))\n"
+    "logp_gen = discriminator(generated_data)"
    ]
   },
   {
@@ -238,7 +245,7 @@
     "###generator training###\n",
     "########################\n",
     "\n",
-    "g_loss = <generator loss>\n",
+    "g_loss = -tf.reduce_mean(logp_gen[:, 1])\n",
     "\n",
     "gen_optimizer = tf.train.AdamOptimizer(1e-4).minimize(g_loss,var_list=generator.trainable_weights)\n",
     "\n",
@@ -310,7 +317,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "code_folding": [],
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -343,7 +351,7 @@
    "outputs": [],
    "source": [
     "from submit_honor import submit_honor\n",
-    "submit_honor((generator, discriminator), <YOUR_EMAIL>, <YOUR_TOKEN>)"
+    "submit_honor((generator, discriminator), 'leijinghaog@gmail.com', <YOUR_TOKEN>)"
    ]
   },
   {
@@ -359,13 +367,6 @@
     "plt.figure(figsize=[16,24])\n",
     "sample_images(16,8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
