--- a/Advanced_Machine_Learning_Specialization/Course2/Programming assignment, week 2: Data leakages/Data leakages.ipynb
+++ b/Advanced_Machine_Learning_Specialization/Course2/Programming assignment, week 2: Data leakages/Data leakages.ipynb
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -62,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('../readonly/data_leakages_data/test_pairs.csv')\n",
@@ -97,45 +93,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -163,12 +149,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "unique_ids = pd.concat([test.FirstId, test.SecondId]).unique()\n",
+    "print('unique_id size '+str(len(unique_ids)))\n",
+    "min_id = min(unique_ids)\n",
+    "max_id = max(unique_ids)\n",
+    "print('min id='+ str(min_id) + ', max id='+str(max_id))"
    ]
   },
   {
@@ -181,12 +169,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "print(test.shape)"
    ]
   },
   {
@@ -199,12 +185,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "print(len(unique_ids)*(len(unique_ids)-1)/2)"
    ]
   },
   {
@@ -230,12 +214,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE GOES HERE"
+    "submission = test.loc[:,['pairId']]\n",
+    "submission['Prediction'] = 1\n",
+    "\n",
+    "submission.to_csv('submission_all_one.csv', index=False)\n",
+    "print('submit all one give score 0.5')"
    ]
   },
   {
@@ -250,36 +236,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -322,12 +293,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "inc_mat = # YOUR CODE GOES HERE (but probably you will need to write few more lines before)\n",
+    "inc_mat = np.zeros((max_id+1, max_id+1), dtype=np.int8)\n",
+    "\n",
+    "def set_inc_mat(row):\n",
+    "    inc_mat[row['FirstId']][row['SecondId']] = 1\n",
+    "    inc_mat[row['SecondId']][row['FirstId']] = 1\n",
+    "\n",
+    "test.apply(set_inc_mat, 1)\n",
     "\n",
     "# Sanity checks\n",
     "assert inc_mat.max() == 1\n",
@@ -344,12 +319,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "inc_mat = inc_mat.tocsr()"
+    "inc_mat = scipy.sparse.csr_matrix(inc_mat)"
    ]
   },
   {
@@ -376,17 +349,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Note, scipy goes crazy if a matrix is indexed with pandas' series. \n",
     "# So do not forget to convert `pd.series` to `np.array`\n",
     "# These lines should normally run very quickly \n",
     "\n",
-    "rows_FirstId   = # YOUR CODE GOES HERE\n",
-    "rows_SecondId  = # YOUR CODE GOES HERE"
+    "rows_FirstId   = inc_mat[test.FirstId]\n",
+    "rows_SecondId  = inc_mat[test.SecondId]"
    ]
   },
   {
@@ -401,15 +372,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Note, that in order to do pointwise multiplication in scipy.sparse you need to use function `multiply`\n",
     "# regular `*` corresponds to matrix-matrix multiplication\n",
     "\n",
-    "f = # YOUR CODE GOES HERE\n",
+    "f = rows_FirstId.multiply(rows_SecondId).sum(axis=1)\n",
+    "f = np.asarray(f).reshape(-1)\n",
     "\n",
     "# Sanity check\n",
     "assert f.shape == (368550, )"
@@ -453,14 +423,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For example use `np.unique` function, check for flags\n",
-    "\n",
-    "print # YOUR CODE GOES HERE"
+    "unique_val, unique_val_cnt= np.unique(f, return_counts=True)\n",
+    "hist = np.array([unique_val, unique_val_cnt])\n",
+    "print(hist)"
    ]
   },
   {
@@ -482,12 +451,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pred = f > # SET THRESHOLD HERE"
+    "pred = f > 15\n",
+    "print(pred)"
    ]
   },
   {
@@ -500,9 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "submission = test.loc[:,['pairId']]\n",
@@ -561,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
